yacc/2.0 introduction to yacc/Lez_1_2/H2/second.y

%token a,b,c
%%

S : a | A b C ;
A : a;
C : A | c;
